--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,10 @@ body {
 	color: transparent;
 	border-radius: 0 4px 4px 0;
 }
-
+.side-switcher-item.active:last-child {
+	color: #fff;
+	background-color: #16b67f;
+}
 .side-input-box {
 	margin: 24px 0;
 	padding: 30px 20px 15px;
@@ -161,4 +164,3 @@ body {
     text-align: right;
     font-size: 10px;
 }
-
